--- a/contact/index.html
+++ b/contact/index.html
@@ -5,9 +5,11 @@ title: "Contact"
 
 <article class="contact">
     <h1>Say Hi!</h1>
-    <p style="text-align:center">I'm also available at US and European timezones. Drop me a line whenever you want to share.</p>
+    <p style="text-align:center">Someone finds it difficult to understand your creative idea?</p>
+    <p style="text-align:center">There is a better visualisation.</p>
+    <p style="text-align:center">Drop me a line at mrrakesh2112[at]gmail[dot]com</p>
     <ul class="social">
-        <li><a href="mailto:mrrakesh2112@gmail.com"><i class="icon-envelope"></i></a></li>
-        <li><a href="https://github.com/jrakesh"><i class="icon-github"></i></a></li>
+      <li><a href="mailto:mrrakesh2112@gmail.com"><i class="icon-envelope"></i></a></li>
+      <li><a href="https://github.com/jrakesh"><i class="icon-github"></i></a></li>
     </ul>
 </article>
