--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@ layout: default
 title: "Rakesh Jha"
 ---
 
-<div class="module">
-    <h1>About Me</h1>
-    <p style="text-align:justify">I'm Rakesh Jha, a 24 year old developer, consultant, and entrepreneur. I’m based in Nagpur, India, working on open source projects worldwide in Ruby on Rails and JavaScript. I’m an active contributor to the <a href="https://github.com/RailsApps">RailsApps</a> project, helping build starter apps used by Rails developers worldwide. You can see some of <a href="https://github.com/jrakesh">my work on GitHub</a>. Join me in Nagpur if you’d like to chat about the startup scene, good coffee, or software craftsmanship. Or get in touch with email or a video call to explore how I can help with your project.</p>
-    <a href="http://www.linkedin.com/in/jrakesh21">Learn more...</a>
+<div style="width:100%" class="module">
+    <div style="float:left;"><img src="img/avatar.jpg" class="avatar"></img></div>
+    <div style="text-align:justify; width=65%;" class="about">I am a 24 year old developer, consultant, and entrepreneur. I am based in Nagpur, India, working on open source projects worldwide in Ruby on Rails and JavaScript. I’m an active contributor to the <a href="https://github.com/RailsApps">RailsApps</a> project, helping build starter apps used by Rails developers worldwide. You can see some of my work on <a href="https://github.com/jrakesh">GitHub</a>. Join me in Nagpur if you’d like to chat about the startup scene, good coffee, or software craftsmanship. Or get in touch with email or a video call to explore how I can help with your project.</div>
+    <a href="http://www.linkedin.com/in/jrakesh21">Learn more</a>
+    <div class="sign">Rakesh Jha</div>
 </div>
 
 <article class="home">
