added testimonials and follow buttons.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Rakesh Jha"
 ---
 
 <div style="width:100%" class="module">
-    <div style="float:left;"><img src="img/avatar.jpg" class="avatar"></img></div>
+    <div style="float:left;"><img src="/img/avatar.jpg" class="avatar"></img></div>
     <div style="text-align:justify; width=65%;" class="about">I am a 24 year old developer, consultant, and entrepreneur. I am based in Nagpur, India, working on open source projects worldwide in Ruby on Rails and JavaScript. I’m an active contributor to the <a href="https://github.com/RailsApps">RailsApps</a> project, helping build starter apps used by Rails developers worldwide. You can see some of my work on <a href="https://github.com/jrakesh">GitHub</a>. Join me in Nagpur if you’d like to chat about the startup scene, good coffee, or software craftsmanship. Or get in touch with email or a video call to explore how I can help with your project.</div>
     <a href="http://www.linkedin.com/in/jrakesh21">Learn more</a>
     <div class="sign">Rakesh Jha</div>
