--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@ title: "Rakesh Jha"
 
 <div style="width:100%" class="module">
     <div style="float:left;"><img src="/img/avatar.jpg" class="avatar"></img></div>
-    <div style="text-align:justify; width=65%;" class="about">I am a 24 year old developer, consultant, and entrepreneur. I am based in Mumbai, India, working on open source projects worldwide in Ruby on Rails and JavaScript. I’m an active contributor to the <a href="https://github.com/RailsApps">RailsApps</a> project, helping build starter apps used by Rails developers worldwide. You can see some of my work on <a href="https://github.com/jrakesh">GitHub</a>. Join me in Mumbai if you’d like to chat about the startup scene, good coffee, or software craftsmanship. Or get in touch with email or a video call to explore how I can help with your project.</div>
-    <a href="http://www.linkedin.com/in/jrakesh21">Learn more</a>
+    <div style="text-align:justify; width=65%;" class="about">A proud son, husband and father that loves programming because it lets him execute on an idea at even 3:00AM with zero raw materials.
+        
+Rakesh Jha is based in Pune, India, architecting & working on commercial as well as open source projects worldwide in Ruby, Ruby on Rails and other web technologies. He is having experience in Sustainability and Climate domain.
+He has contributed to the RailsApps project, helping build starter apps used by Rails developers worldwide. Having crafted many high scalable web applications, Rakesh is a multi-linguist in technology-driven business. He speaks fluent geek and have good ideas for front-end and back-end stuff.
+Often hangs out with open-source libraries during leisure time, Rakesh is an absolute wanderlust, an avid writer and passionate about music & performing arts.
+
+Rakesh loves making new professional acquaintances. Reach out if you want to talk technology, business or sports.
+
+Specialities : Sustainability & Climate, ESG, Product Management, Ruby, Ruby on Rails, Jruby, JavaScript, Mentorship, Project lead delivery, Data extraction, Design discussion, Server Deployment, API & Third party integrations, GIT, JIRA, Teamcity, Heroku, Amazon Services, Cloud DevOps</div>
+    <a href="https://www.linkedin.com/in/imrakeshjha/">Linkedin</a>
+    <a href="https://github.com/jrakesh">Github</a>
+    <a href="https://www.yourquote.in/rakesh-jha-bsw7u/quotes">Poetries</a>
+    
     <div class="sign">Rakesh Jha</div>
 </div>
 
