--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ title: "Rakesh Jha"
 
 <div style="width:100%" class="module">
     <div style="float:left;"><img src="/img/avatar.jpg" class="avatar"></img></div>
-    <div style="text-align:justify; width=65%;" class="about">A proud son, husband and father that loves programming because it lets him execute on an idea at even 3:00AM with zero raw materials. Rakesh Jha is based in Pune, India, architecting & working on commercial as well as open source projects worldwide in Ruby, Ruby on Rails and other web technologies and also has experience in Sustainability and Climate domain. Often hangs out with open-source libraries during leisure time, Rakesh is an absolute wanderlust, an avid writer and passionate about music & performing arts. Rakesh loves making new professional acquaintances. Reach out if you want to talk technology, business or sports.
-        Specialities : Sustainability & Climate, ESG, Product Owner, Data Platform, Ruby, Ruby on Rails, Jruby, JavaScript, SQL, Project Management and Delivery, Data Extraction, Design Discussion, Server Deployment, API & Third Party Integrations, GIT, JIRA, Heroku, Amazon Services, Cloud DevOps
+    <div style="text-align:justify; width=65%;" class="about">A proud son, husband and father that loves programming because it lets him execute on an idea at even 3:00AM with zero raw materials. Rakesh Jha is based in Pune, India, architecting & working on commercial as well as open source projects worldwide. Rakesh is an absolute wanderlust, an avid writer and passionate about music & performing arts. Specialities : Sustainability & Climate, ESG, Product Owner, Data Platform, Ruby, Ruby on Rails, Jruby, JavaScript, SQL, Project Management and Delivery, Data Extraction, Design Discussion, Server Deployment, API & Third Party Integrations, GIT, JIRA, Heroku, Amazon Services, Cloud DevOps
     </div>
     
     <a href="https://www.linkedin.com/in/imrakeshjha/">Linkedin</a>
