--- a/contact/index.html
+++ b/contact/index.html
@@ -5,8 +5,7 @@ title: "Contact"
 
 <article class="contact">
     <h1>Say Hi!</h1>
-    <p style="text-align:center">Someone finds it difficult to understand your creative idea?</br>
-    There is a better visualisation.</p>
+    <p style="text-align:center">Someone finds it difficult to understand your creative idea?</p>
     <p style="text-align:center">Drop me a line at mrrakesh2112[at]gmail[dot]com</p>
     <ul class="social">
       <li><a href="mailto:mrrakesh2112@gmail.com"><i class="icon-envelope"></i></a></li>
