--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@ title: "Contact"
     	<!-- AddThis Follow BEGIN -->
 			<div class="addthis_toolbox addthis_32x32_style addthis_default_style">
 				<a class="addthis_button_facebook_follow" addthis:userid="geekrakesh"></a>
-				<a class="addthis_button_linkedin_follow" addthis:userid="jrakesh21/"></a>
+				<a class="addthis_button_linkedin_follow" addthis:userid="imrakeshjha/"></a>
 			</div>
 			<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-532547b50394f742"></script>
 			<!-- AddThis Follow END -->
